# EasyPyEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CmakeLists.txt  Makefile  README.md  SECURITY.md  cmake_install.cmake  compile.sh  compile_commands.json  pyproject.toml  roadmap.md  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yml
docs/: getting_started.md  roadmap.md  usage.md
example/: demo.py  test.py
include/: engine.h  engine_helper.h  graphics.h  input.h  physics.h  sprite.h
python/: MANIFEST.in  api_stub.py  easyPyEngine.c  easyPyEngineModule.c  engine_wrapper.pyx  pyproject.toml  setup.py  test.py
release/: easypyengine-0.1.0-linux.whl  easypyengine-0.1.0-macos.whl
src/: engine.c  engine_helper.c  graphics.c  input.c  physics.c  sprite.c
