# config file

[project]
name = "easyPyEngine"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT"}

[build-system]
requires = ["scikit-build-core>=0.9.0", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["."]
cmake.args = ["-DPYTHON_EXECUTABLE:FILEPATH={python_executable}"]



