[build-system]
requires = ["scikit-build-core>=0.9.0", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "easyPyEngine"
version = "0.1.0"
description = "Minimal 2D C-based Python game engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.scikit-build]
wheel.packages = ["python/easyPyEngine"]
cmake.verbose = true
