[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyPyEngine"
version = "0.1.0"
description = "Minimal 2D C-based Python game engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools]
packages = ["easyPyEngine"]
include-package-data = true
